oranized html structure

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,6 +1,17 @@
 <header class="header">
-    <h1>Шапка сайта</h1>
-    <p>
-        Lorem ipsum dolor!
-    </p>
+    <div class="container">
+        <div class="container__inner">
+            <div class="header__logo">
+                <a href=""><span>sh<span class="blue-mark">o</span>pno</span></a>
+            </div>
+            <div class="header__title">
+                <span>say hello to <span class="blue-mark">shopno!</span></span>
+            </div>
+            <div class="header__title">
+                <span><span class="blue-mark">agency</span> corporate shopno theme</span>
+            </div>
+            <button class="header__btn-contact">contact us</button>
+            <div class="header__img"></div>
+        </div>
+    </div>
 </header>
