--- a/#src/index.html
+++ b/#src/index.html
@@ -3,21 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <link rel="stylesheet" href="css/style.min.css">
     <title>SHOPNO</title>
 </head>
 
 <body>
+    <div class="wrapper">
+        @@include('_header.html')
+        @@include('_about.html')
+        @@include('_works.html')
+        @@include('_team.html')
+        @@include('_message-form.html')
+        @@include('_footer.html')
+    </div>
 
-    @@include('_header.html')
-    @@include('_about.html')
-    @@include('_works.html')
-    @@include('_team.html')
-    @@include('_message-form.html')
-    @@include('_footer.html')
 
-    <script src="js/script.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" defer></script>
+    <script src="js/script.min.js" defer></script>
 </body>
 
 </html>
