feated header about orks blocks

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,17 +1,22 @@
 <header class="header">
     <div class="container">
-        <div class="container__inner">
-            <div class="header__logo">
-                <a href=""><span>sh<span class="blue-mark">o</span>pno</span></a>
-            </div>
-            <div class="header__title">
-                <span>say hello to <span class="blue-mark">shopno!</span></span>
-            </div>
-            <div class="header__title">
-                <span><span class="blue-mark">agency</span> corporate shopno theme</span>
-            </div>
-            <button class="header__btn-contact">contact us</button>
-            <div class="header__img"></div>
+
+        <div class="header__logo click">
+            <!-- <a href="">sh<span class='blue'>o</span>pno</a> -->
+            <img class="click" src="img/logo.png" alt="" />
         </div>
+
+
+        <div class="header__title">
+            <span>say hello to <span class="blue-mark">shopno!</span></span>
+        </div>
+        <div class="header__title">
+            <span><span class="blue-mark">agency</span> corporate shopno theme</span>
+        </div>
+        <div class="header__btn">
+            <button class="header__btn-contact">contact us</button>
+        </div>
+        <div class="header__img"><img src="img/glass.png" alt="" /></div>
+
     </div>
 </header>
