--- a/#src/_about.html
+++ b/#src/_about.html
@@ -1,16 +1,33 @@
 <div class="about">
     <div class="container">
-        <div class="container__inner">
-            <div class="about__title">about us</div>
-            <div class="about__text">Lorem ipsum dolor sit amet event landing template</div>
-            <div class="about__row">
-                <div class="about__row-image"></div>
-                <div class="about__row-text">
-                    <span>we actually do amazing works</span>
-                    <span>why we are the great?</span>
+
+        <div class="about__title">about us</div>
+        <div class="about__text">Lorem ipsum dolor sit amet event landing template</div>
+        <div class="about__row">
+            <div class="about__row-image"><img src="img/chair.png" alt="" /></div>
+            <div class="about__row-text">
+                <div class="about__row-text-article">
+                    <div class="about__row-text-article-title">we actually do amazing works</div>
+                    <div class="about__row-text-article-text">
+                        A visual approach is an approach to a runway at an airport conducted under instrument flight
+                        rules. The pilot must at all times have either the airport or the preceding aircraft in approach
+                        correct sight. conducted under instrument flight rules. The pilot must at all times.
+                    </div>
+                    <div class="about__row-text-article-text">
+                        Preceding aircraft in approach correct sight. conducted under instrument flight rules.
+
+                    </div>
+                </div>
+                <div class="about__row-text-article">
+                    <div class="about__row-text-article-title">why we are the great?</div>
+                    <div class="about__row-text-article-text">
+                        A visual approach is an approach to a runway at an airport conducted under instrument flight
+                        rules.The preceding aircraft in approach correct sight.
+                    </div>
                 </div>
             </div>
-
         </div>
+
+
     </div>
 </div>
