--- a/#src/_works.html
+++ b/#src/_works.html
@@ -5,22 +5,22 @@
             <div class="works__text">Lorem ipsum dolor sit amet event landing template</div>
             <div class="works__images-row">
                 <div class="works__images-row-item">
-                    <img src="img/services1.png" alt="" />
+                    <img src="img/works-pic1.png" alt="" />
                 </div>
                 <div class="works__images-row-item">
-                    <img src="img/services1.png" alt="" />
+                    <img src="img/works-pic2.png" alt="" />
                 </div>
                 <div class="works__images-row-item">
-                    <img src="img/services1.png" alt="" />
+                    <img src="img/works-pic3.png" alt="" />
                 </div>
                 <div class="works__images-row-item">
-                    <img src="img/services1.png" alt="" />
+                    <img src="img/works-pic4.png" alt="" />
                 </div>
                 <div class="works__images-row-item">
-                    <img src="img/services1.png" alt="" />
+                    <img src="img/works-pic5.png" alt="" />
                 </div>
                 <div class="works__images-row-item">
-                    <img src="img/services1.png" alt="" />
+                    <img src="img/works-pic6.png" alt="" />
                 </div>
             </div>
 
