--- a/#src/index.html
+++ b/#src/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <link rel="stylesheet" href="css/style.min.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&family=Montserrat:wght@400;700&family=Raleway:wght@400;700&display=swap"
+        rel="stylesheet">
+
+
     <title>SHOPNO</title>
 </head>
 
@@ -14,7 +19,7 @@
         @@include('_about.html')
         @@include('_works.html')
         @@include('_team.html')
-        @@include('_message-form.html')
+        @@include('_message.html')
         @@include('_footer.html')
     </div>
 
