feated team works mesage

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -6,9 +6,8 @@
             <img class="click" src="img/logo.png" alt="" />
         </div>
 
-
         <div class="header__title">
-            <span>say hello to <span class="blue-mark">shopno!</span></span>
+            <span>say hello to<span class="blue-mark"> shopno! </span></span>
         </div>
         <div class="header__title">
             <span><span class="blue-mark">agency</span> corporate shopno theme</span>
@@ -16,7 +15,10 @@
         <div class="header__btn">
             <button class="header__btn-contact">contact us</button>
         </div>
-        <div class="header__img"><img src="img/glass.png" alt="" /></div>
+        <div class="header__img">
+            <div class="header__img-inner"></div>
+            <img src="img/glass.png" alt="" />
+        </div>
 
     </div>
 </header>
