--- a/#src/_team.html
+++ b/#src/_team.html
@@ -1,29 +1,29 @@
 <div class="team">
     <div class="container">
-        <div class="container__inner">
-            <div class="team__title">featured team</div>
-            <div class="team__text">Lorem ipsum dolor sit amet event landing template</div>
-            <div class="team__images-row">
-                <div class="team__images-row-item">
-                    <img src="img/services1.png" alt="" />
-                </div>
-                <div class="team__images-row-item">
-                    <img src="img/services1.png" alt="" />
-                </div>
-                <div class="team__images-row-item">
-                    <img src="img/services1.png" alt="" />
-                </div>
-                <div class="team__images-row-item">
-                    <img src="img/services1.png" alt="" />
-                </div>
-                <div class="team__images-row-item">
-                    <img src="img/services1.png" alt="" />
-                </div>
-                <div class="team__images-row-item">
-                    <img src="img/services1.png" alt="" />
-                </div>
-            </div>
 
+        <div class="team__title">featured team</div>
+        <div class="team__text">Lorem ipsum dolor sit amet event landing template</div>
+        <div class="team__images-row">
+            <div class="team__images-row-item">
+                <img src="img/team_1.png" alt="" />
+            </div>
+            <div class="team__images-row-item">
+                <img src="img/team_2.png" alt="" />
+            </div>
+            <div class="team__images-row-item">
+                <img src="img/team_3.png" alt="" />
+            </div>
+            <div class="team__images-row-item">
+                <img src="img/team_4.png" alt="" />
+            </div>
+            <div class="team__images-row-item">
+                <img src="img/team_5.png" alt="" />
+            </div>
+            <div class="team__images-row-item">
+                <img src="img/team_6.png" alt="" />
+            </div>
         </div>
+
+
     </div>
 </div>
