feated message and added  map

--- a/#src/_team.html
+++ b/#src/_team.html
@@ -6,21 +6,93 @@
         <div class="team__images-row">
             <div class="team__images-row-item">
                 <img src="img/team_1.png" alt="" />
+
+                <div class="works__images-row-item-text img-text">
+                    <div class="img-text__title">NATASHA<span>Tester</span></div>
+                    <div class="img-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore</div>
+                    <!--  <div class="text__social">
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                    </div> -->
+                </div>
             </div>
             <div class="team__images-row-item">
                 <img src="img/team_2.png" alt="" />
+
+                <div class="works__images-row-item-text img-text">
+                    <div class="img-text__title">AL RAYHAN<span>UI Designer</span></div>
+                    <div class="img-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore</div>
+                    <!--  <div class="text__social">
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                    </div> -->
+                </div>
             </div>
             <div class="team__images-row-item">
                 <img src="img/team_3.png" alt="" />
+
+                <div class="works__images-row-item-text img-text">
+                    <div class="img-text__title">VANYA<span>Java-developer</span></div>
+                    <div class="img-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore</div>
+                    <!--  <div class="text__social">
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                    </div> -->
+                </div>
             </div>
             <div class="team__images-row-item">
                 <img src="img/team_4.png" alt="" />
+
+                <div class="works__images-row-item-text img-text">
+                    <div class="img-text__title">Sasha<span>Java-developer</span></div>
+                    <div class="img-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore</div>
+                    <!--  <div class="text__social">
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                    </div> -->
+                </div>
             </div>
             <div class="team__images-row-item">
                 <img src="img/team_5.png" alt="" />
+
+                <div class="works__images-row-item-text img-text">
+                    <div class="img-text__title">SVETA<span>Js-developer</span></div>
+                    <div class="img-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore</div>
+                    <!--  <div class="text__social">
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                    </div> -->
+                </div>
             </div>
             <div class="team__images-row-item">
                 <img src="img/team_6.png" alt="" />
+
+                <div class="works__images-row-item-text img-text">
+                    <div class="img-text__title">NATASHA<span>Tester</span></div>
+                    <div class="img-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore</div>
+                    <!--  <div class="text__social">
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                        <a href="#"><img src="img/team_1.png"></a>
+                    </div> -->
+                </div>
             </div>
         </div>
 
