--- a/#src/_message.html
+++ b/#src/_message.html
@@ -16,7 +16,7 @@
                         <div class="message__row-form-inner-line">
                             <input autocomplete="off" type="text" placeholder="E-mail*" class="input" />
                         </div>
-                        <div class="message__row-form-inner-line">
+                        <div class="message__row-form-inner-line textarea">
                             <textarea autocomplete="off" placeholder="Message" class="input"></textarea>
                         </div>
                         <div class="message__row-form-inner-button">
@@ -39,42 +39,14 @@
                 <div class="message__row-map-attr">Adress Line 2</div>
                 <div class="message__row-map-attr">Phone: +548123456</div>
                 <div class="message__row-map-attr">Fax: +123456 12345</div>
-                <div class="message__row-map-attr web">Web: www.designagency.net</div>
-                <div class="message__row-map-attr web">E-mail: info@designagency.net5</div>
-                <div class="message__row-map-loc" id="map"></div>
+                <div class="message__row-map-attr">Web: www.designagency.net</div>
+                <div class="message__row-map-attr">E-mail: info@designagency.net5</div>
+
+                <div class="message__row-map-loc" id="map" style="width:100%;height:220px;"></div>
+
             </div>
 
         </div>
 
     </div>
 </div>
-
-
-
-<!-- 
-<form action="mailto:someone@example.com" method="post" class="message__row-message form-group">
-
-    
-
-
-    <div class="form-group__item">
-        <label for='name'>Name*</label>
-        <input type="text" name="name" class="form-group__item-control">
-    </div>
-    <div class="form-group__item">
-        <label for='submit'>Submit*</label>
-        <textarea rows="3" name="message" class="form-group__item-control"></textarea>
-    </div>
-    <div class="form-group__item">
-        <label for='email'>E-mail*</label>
-        <input type="email" name="email" class="form-group__item-control">
-    </div>
-    <div class="form-group__item">
-        <label for='message'>Message*</label>
-        <textarea rows="3" name="message" class="form-group__item-control"></textarea>
-    </div>
-
-   
-    <input type="submit" value="send message" className="form-group__button">
-   
-</form> -->
