--- a/#src/index.html
+++ b/#src/index.html
@@ -26,6 +26,8 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" defer></script>
     <script src="js/script.min.js" defer></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU" type="text/javascript">
+    </script>
 </body>
 
 </html>
