feated messages and work areas

--- a/#src/_about.html
+++ b/#src/_about.html
@@ -1,8 +1,10 @@
 <div class="about">
-    <div class="container">
+    <div class="container block">
+        <div class="top-block">
+            <div class="top-block__title">about us</div>
+            <div class="top-block__text">Lorem ipsum dolor sit amet event landing template</div>
+        </div>
 
-        <div class="about__title">about us</div>
-        <div class="about__text">Lorem ipsum dolor sit amet event landing template</div>
         <div class="about__row">
             <div class="about__row-image"><img src="img/chair.png" alt="" /></div>
             <div class="about__row-text">
