--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -4,19 +4,18 @@
         <div class="footer__title">follow us</div>
         <div class="footer__row">
             <div class="footer__row-item">
-                <a href="#"><img src="img/services1.png" alt="" /></a>
+                <a href="#"><img src="img/social1.png" alt="" /></a>
             </div>
             <div class="footer__row-item">
-                <a href="#"><img src="img/services1.png" alt="" /></a>
+                <a href="#"><img src="img/social2.png" alt=""></a>
             </div>
             <div class="footer__row-item">
-                <a href="#"><img src="img/services1.png" alt="" /></a>
+                <a href="#"><img src="img/social3.png" alt=""></a>
             </div>
             <div class="footer__row-item">
-                <a href="#"><img src="img/services1.png" alt="" /></a>
+                <a href="#"><img src="img/social4.png" alt=""></a>
             </div>
         </div>
-
 
     </div>
 </div>
