--- a/#src/_team.html
+++ b/#src/_team.html
@@ -1,97 +1,110 @@
 <div class="team">
     <div class="container">
+        <div class="top-block">
+            <div class="top-block__title">featured team</div>
+            <div class="top-block__text">Lorem ipsum dolor sit amet event landing template</div>
+        </div>
+        <div class="team__grid">
+            <div class="team__item">
+                <div class="team__img-box">
+                    <img src="img/team_1.png" alt="">
+                </div>
 
-        <div class="team__title">featured team</div>
-        <div class="team__text">Lorem ipsum dolor sit amet event landing template</div>
-        <div class="team__images-row">
-            <div class="team__images-row-item">
-                <img src="img/team_1.png" alt="" />
-
-                <div class="works__images-row-item-text img-text">
-                    <div class="img-text__title">NATASHA<span>Tester</span></div>
-                    <div class="img-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                <div class="team__tip img-tip">
+                    <div class="img-tip__title">NATASHA<span> / Tester</span></div>
+                    <div class="img-tip__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore</div>
-                    <!--  <div class="text__social">
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                    </div> -->
+                    <div class="img-tip__social">
+                        <a href="#"><img src="img/team-social1.png"></a>
+                        <a href="#"><img src="img/team-social2.png"></a>
+                        <a href="#"><img src="img/team-social3.png"></a>
+                        <a href="#"><img src="img/team-social4.png"></a>
+                    </div>
                 </div>
             </div>
-            <div class="team__images-row-item">
-                <img src="img/team_2.png" alt="" />
+            <div class="team__item">
+                <div class="team__img-box">
+                    <img src="img/team_2.png" alt="">
+                </div>
 
-                <div class="works__images-row-item-text img-text">
-                    <div class="img-text__title">AL RAYHAN<span>UI Designer</span></div>
-                    <div class="img-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                <div class="team__tip img-tip">
+                    <div class="img-tip__title">AL RAYHAN<span> / UI Designer</span></div>
+                    <div class="img-tip__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore</div>
-                    <!--  <div class="text__social">
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                    </div> -->
+                    <div class="img-tip__social">
+                        <a href="#"><img src="img/team-social1.png"></a>
+                        <a href="#"><img src="img/team-social2.png"></a>
+                        <a href="#"><img src="img/team-social3.png"></a>
+                        <a href="#"><img src="img/team-social4.png"></a>
+                    </div>
                 </div>
             </div>
-            <div class="team__images-row-item">
-                <img src="img/team_3.png" alt="" />
+            <div class="team__item">
+                <div class="team__img-box">
+                    <img src="img/team_3.png" alt="">
+                </div>
 
-                <div class="works__images-row-item-text img-text">
-                    <div class="img-text__title">VANYA<span>Java-developer</span></div>
-                    <div class="img-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                <div class="team__tip img-tip">
+                    <div class="img-tip__title">VANYA<span> / Java-developer</span></div>
+                    <div class="img-tip__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore</div>
-                    <!--  <div class="text__social">
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                    </div> -->
+                    <div class="img-tip__social">
+                        <a href="#"><img src="img/team-social1.png"></a>
+                        <a href="#"><img src="img/team-social2.png"></a>
+                        <a href="#"><img src="img/team-social3.png"></a>
+                        <a href="#"><img src="img/team-social4.png"></a>
+                    </div>
                 </div>
             </div>
-            <div class="team__images-row-item">
-                <img src="img/team_4.png" alt="" />
+            <div class="team__item">
+                <div class="team__img-box">
+                    <img src="img/team_4.png" alt="">
+                </div>
 
-                <div class="works__images-row-item-text img-text">
-                    <div class="img-text__title">Sasha<span>Java-developer</span></div>
-                    <div class="img-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                <div class="team__tip img-tip">
+                    <div class="img-tip__title">Sasha<span> / Java-developer</span></div>
+                    <div class="img-tip__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore</div>
-                    <!--  <div class="text__social">
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                    </div> -->
+                    <div class="img-tip__social">
+                        <a href="#"><img src="img/team-social1.png"></a>
+                        <a href="#"><img src="img/team-social2.png"></a>
+                        <a href="#"><img src="img/team-social3.png"></a>
+                        <a href="#"><img src="img/team-social4.png"></a>
+                    </div>
                 </div>
             </div>
-            <div class="team__images-row-item">
-                <img src="img/team_5.png" alt="" />
+            <div class="team__item">
+                <div class="team__img-box">
+                    <img src="img/team_5.png" alt="">
+                </div>
 
-                <div class="works__images-row-item-text img-text">
-                    <div class="img-text__title">SVETA<span>Js-developer</span></div>
-                    <div class="img-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                <div class="team__tip img-tip">
+                    <div class="img-tip__title">SVETA<span> / Js-developer</span></div>
+                    <div class="img-tip__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore</div>
-                    <!--  <div class="text__social">
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                    </div> -->
+                    <div class="img-tip__social">
+                        <a href="#"><img src="img/team-social1.png"></a>
+                        <a href="#"><img src="img/team-social2.png"></a>
+                        <a href="#"><img src="img/team-social3.png"></a>
+                        <a href="#"><img src="img/team-social4.png"></a>
+                    </div>
                 </div>
             </div>
-            <div class="team__images-row-item">
-                <img src="img/team_6.png" alt="" />
+            <div class="team__item">
+                <div class="team__img-box">
+                    <img src="img/team_6.png" alt="">
+                </div>
 
-                <div class="works__images-row-item-text img-text">
-                    <div class="img-text__title">NATASHA<span>Tester</span></div>
-                    <div class="img-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                <div class="team__tip img-tip">
+                    <div class="img-tip__title">NATASHA<span> / Tester</span></div>
+                    <div class="img-tip__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore</div>
-                    <!--  <div class="text__social">
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                        <a href="#"><img src="img/team_1.png"></a>
-                    </div> -->
+                    <div class="img-tip__social">
+                        <a href="#"><img src="img/team-social1.png"></a>
+                        <a href="#"><img src="img/team-social2.png"></a>
+                        <a href="#"><img src="img/team-social3.png"></a>
+                        <a href="#"><img src="img/team-social4.png"></a>
+                    </div>
                 </div>
             </div>
         </div>
