--- a/#src/_works.html
+++ b/#src/_works.html
@@ -1,8 +1,9 @@
 <div class="works">
     <div class="container">
-
-        <div class="works__title">featured works</div>
-        <div class="works__text">Lorem ipsum dolor sit amet event landing template</div>
+        <div class="top-block">
+            <div class="top-block__title">featured works</div>
+            <div class="top-block__text">Lorem ipsum dolor sit amet event landing template</div>
+        </div>
         <div class="works__images-row">
             <div class="works__images-row-item">
                 <img src="img/works-pic1.png" alt="" />
@@ -23,7 +24,5 @@
                 <img src="img/works-pic6.png" alt="" />
             </div>
         </div>
-
-
     </div>
 </div>
