--- a/#src/index.html
+++ b/#src/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <link rel="stylesheet" href="css/style.min.css">
     <link
-        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&family=Montserrat:wght@400;700&family=Raleway:wght@400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:wght@400;700&family=Raleway:wght@400;700&display=swap"
         rel="stylesheet">
-
-
     <title>SHOPNO</title>
 </head>
 
@@ -23,8 +21,6 @@
         @@include('_footer.html')
     </div>
 
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" defer></script>
     <script src="js/script.min.js" defer></script>
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU" type="text/javascript">
     </script>
