--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -4,16 +4,16 @@
         <div class="footer__title">follow us</div>
         <div class="footer__row">
             <div class="footer__row-item">
-                <a href="#"><img src="img/social1.png" alt="" /></a>
+                <a href="#"><i class="fa fa-pinterest fa-2x" aria-hidden="true"></i></i></a>
             </div>
             <div class="footer__row-item">
-                <a href="#"><img src="img/social2.png" alt=""></a>
+                <a href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
             </div>
             <div class="footer__row-item">
-                <a href="#"><img src="img/social3.png" alt=""></a>
+                <a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
             </div>
             <div class="footer__row-item">
-                <a href="#"><img src="img/social4.png" alt=""></a>
+                <a href="#"><i class="fa fa-dribbble fa-2x" aria-hidden="true"></i></a>
             </div>
         </div>
 
