feated responsive, added phone and email tags

--- a/#src/_team.html
+++ b/#src/_team.html
@@ -15,10 +15,10 @@
                     <div class="img-tip__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore</div>
                     <div class="img-tip__social">
-                        <a href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-dribbble fa-2x" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-dribbble fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -32,10 +32,10 @@
                     <div class="img-tip__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore</div>
                     <div class="img-tip__social">
-                        <a href="#"><img src="img/team-social1.png"></a>
-                        <a href="#"><img src="img/team-social2.png"></a>
-                        <a href="#"><img src="img/team-social3.png"></a>
-                        <a href="#"><img src="img/team-social4.png"></a>
+                        <a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-dribbble fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -49,10 +49,10 @@
                     <div class="img-tip__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore</div>
                     <div class="img-tip__social">
-                        <a href="#"><img src="img/team-social1.png"></a>
-                        <a href="#"><img src="img/team-social2.png"></a>
-                        <a href="#"><img src="img/team-social3.png"></a>
-                        <a href="#"><img src="img/team-social4.png"></a>
+                        <a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-dribbble fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -66,10 +66,10 @@
                     <div class="img-tip__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore</div>
                     <div class="img-tip__social">
-                        <a href="#"><img src="img/team-social1.png"></a>
-                        <a href="#"><img src="img/team-social2.png"></a>
-                        <a href="#"><img src="img/team-social3.png"></a>
-                        <a href="#"><img src="img/team-social4.png"></a>
+                        <a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-dribbble fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -83,10 +83,10 @@
                     <div class="img-tip__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore</div>
                     <div class="img-tip__social">
-                        <a href="#"><img src="img/team-social1.png"></a>
-                        <a href="#"><img src="img/team-social2.png"></a>
-                        <a href="#"><img src="img/team-social3.png"></a>
-                        <a href="#"><img src="img/team-social4.png"></a>
+                        <a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-dribbble fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -100,10 +100,10 @@
                     <div class="img-tip__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore</div>
                     <div class="img-tip__social">
-                        <a href="#"><img src="img/team-social1.png"></a>
-                        <a href="#"><img src="img/team-social2.png"></a>
-                        <a href="#"><img src="img/team-social3.png"></a>
-                        <a href="#"><img src="img/team-social4.png"></a>
+                        <a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-dribbble fa-lg" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
