--- a/#src/_message.html
+++ b/#src/_message.html
@@ -29,10 +29,12 @@
                 <div class="message__box">
                     <div class="message__row-map-attr">Adress Line 1</div>
                     <div class="message__row-map-attr">Adress Line 2</div>
-                    <div class="message__row-map-attr">Phone: +548123456</div>
-                    <div class="message__row-map-attr">Fax: +123456 12345</div>
-                    <div class="message__row-map-attr">Web: www.designagency.net</div>
-                    <div class="message__row-map-attr">E-mail: info@designagency.net5</div>
+                    <div class="message__row-map-attr">Phone: <a href="tel:+1-562-867-5309">+1-562-867-5309</a></div>
+                    <div class="message__row-map-attr">Fax: <a href="tel:+1-562-867-5320">+1-562-867-5320</a></div>
+                    <div class="message__row-map-attr">Web: <a href="https://www.designagency.net"
+                            target="_blank">www.designagency.net</a></div>
+                    <div class="message__row-map-attr">E-mail: <a
+                            href="mailto:info@designagency.net">info@designagency.net</a></div>
                     <div class="message__row-map-loc" id="map" style="width:100%;height:220px;"></div>
                 </div>
             </div>
