--- a/#src/_works.html
+++ b/#src/_works.html
@@ -5,24 +5,28 @@
             <div class="top-block__text">Lorem ipsum dolor sit amet event landing template</div>
         </div>
         <div class="works__images-row">
-            <div class="works__images-row-item">
-                <img src="img/works-pic1.png" alt="" />
+            <div class="works__images-row-item js__item">
+                <img src="img/works-pic1.png" alt="Triangle ice-cream" data-original='works-pic1-big.jpg' />
             </div>
             <div class="works__images-row-item">
-                <img src="img/works-pic2.png" alt="" />
+                <img src="img/works-pic2.png" alt="Business cards" data-original='works-pic2-big.jpg' />
             </div>
             <div class="works__images-row-item">
-                <img src="img/works-pic3.png" alt="" />
+                <img src="img/works-pic3.png" alt="Bottles" data-original='works-pic3-big.jpg' />
             </div>
             <div class="works__images-row-item">
-                <img src="img/works-pic4.png" alt="" />
+                <img src="img/works-pic4.png" alt="Notebook" data-original='works-pic4-big.jpg' />
             </div>
             <div class="works__images-row-item">
-                <img src="img/works-pic5.png" alt="" />
+                <img src="img/works-pic5.png" alt="Nine euro" data-original='works-pic5-big.jpg' />
             </div>
             <div class="works__images-row-item">
-                <img src="img/works-pic6.png" alt="" />
+                <img src="img/works-pic6.png" alt="Tea bag" data-original='works-pic6-big.jpg' />
             </div>
+        </div>
+        <div class="works__modal js-works__modal">
+            <img src="img/works-pic6-big.jpg" alt="" class="js-works__modal-full-img">
+            <p class="js-works__modal-caption"></p>
         </div>
     </div>
 </div>
