--- a/#src/index.html
+++ b/#src/index.html
@@ -23,6 +23,7 @@
     </div>
 
     <script src="js/script.min.js" defer></script>
+    <script src="js/popup.min.js" defer></script>
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU" type="text/javascript">
     </script>
 </body>
