feated popup ESC

--- a/#src/_works.html
+++ b/#src/_works.html
@@ -5,11 +5,11 @@
             <div class="top-block__text">Lorem ipsum dolor sit amet event landing template</div>
         </div>
         <div class="works__images-row">
-            <div class="works__images-row-item js__item">
+            <div class="works__images-row-item js-works__images-row-item">
                 <img src="img/works-pic1.png" alt="Triangle ice-cream" data-original='works-pic1-big.jpg' />
             </div>
             <div class="works__images-row-item">
-                <img src="img/works-pic2.png" alt="Business cards" data-original='works-pic2-big.jpg' />
+                <img src="img/works-pic2.png" alt="Business cards" data-original='works-pic2-big.png' />
             </div>
             <div class="works__images-row-item">
                 <img src="img/works-pic3.png" alt="Bottles" data-original='works-pic3-big.jpg' />
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="works__modal js-works__modal">
-            <img src="img/works-pic6-big.jpg" alt="" class="js-works__modal-full-img" />
+            <img src="img/works-pic1-big.webp" alt="" class="js-works__modal-full-img" />
             <p class="js-works__modal-caption"></p>
         </div>
     </div>
