--- a/#src/_works.html
+++ b/#src/_works.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="works__modal js-works__modal">
-            <img src="img/works-pic1-big.webp" alt="" class="js-works__modal-full-img" />
+            <img src="img/works-pic1-big.webp" alt="" class="works__modal-full-img js-works__modal-full-img" />
             <p class="js-works__modal-caption"></p>
         </div>
     </div>
